objects/TW1_Item_area_Comum__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Data_da_Vistoria__c</fullName>
        <label>Data da Vistoria</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Observacoes__c</fullName>
        <label>Observações</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Relacionado_ao_Caso__c</fullName>
        <label>Relacionado ao Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Itens de Áreas Comuns</relationshipLabel>
        <relationshipName>Itens_de_reas_Comuns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tw1_Area_Vistoriada__c</fullName>
        <label>Área Vistoriada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brinquedoteca</fullName>
                </value>
                <value>
                    <fullName>Elevador</fullName>
                </value>
                <value>
                    <fullName>Escadas</fullName>
                </value>
                <value>
                    <fullName>Hall Elevador</fullName>
                </value>
                <value>
                    <fullName>Piscina</fullName>
                </value>
                <value>
                    <fullName>Portaria</fullName>
                </value>
                <value>
                    <fullName>Sauna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tw1_Status_da_Vistoria__c</fullName>
        <label>Status da Vistoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aprovado</fullName>
                </value>
                <value>
                    <fullName>Aprovado Parcial</fullName>
                </value>
                <value>
                    <fullName>Reprovado</fullName>
                </value>
                <value>
                    <fullName>Em aberto</fullName>
                    <default>true</default>
                    <label>Em aberto</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item Área Comum</label>
    <nameField>
        <displayFormat>AC-{YY}{MM}{DD}{000000}</displayFormat>
        <label>Nome do Item Área Comum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens de Áreas Comuns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ImpedirCriarItemDepoisAprovado</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     ISNEW(),
     ISPICKVAL(TW1_Relacionado_ao_Caso__r.TW1_Status_da_Vistoria_de_rea_Comum__c, &quot;Aprovada&quot;)
   )</errorConditionFormula>
        <errorMessage>Você não pode criar um novo item com a Aprovação da Vistoria como Aprovada. Caso precise criar novo item alterar o campo: Aprovação da Vistoria da Área Comum na tela do Caso</errorMessage>
    </validationRules>
</CustomObject>